src/styles.css
/* ... */
@media screen and (max-width: 600px) {
  .accounts-modal {
    width: 100%;
  }
}

@media screen and (min-width: 601px) {
  .accounts-modal {
    width: 60%;
    float: left;
  }
}

/* .override-actions{ margin: 0 auto; display: table;float: none !important; } */
@media screen and (max-width: 600px) {
  .modal-dialog {
    width: 100% !important;
  }
}

@media screen and (min-width: 601px) {
  .modal-dialog {
    width: 50% !important;
  }
}

.fileinput-button-css {
  position: relative;
  overflow: hidden;
}

.fileinput-button-css input {
  position: absolute;
  top: 0;
  right: 0;
  margin: 0;
  opacity: 0;
  -ms-filter: "alpha(opacity=0)";
  direction: ltr;
  cursor: pointer;
}

.form-control {
  border-radius: 3px !important;
}

.l-g-view {
  background-color: #f1f3fa;
  border-radius: 3px !important;
  border: 1px solid #e0e0e0 !important;
  padding: 0 !important;
  height: 34px;
}

.lt-blue-c {
  color: #008fd5 !important;
  border-color: #008fd5 !important;
}

.lt-green-c {
  color: #58cc00 !important;
  border-color: #008fd5 !important;
}

.tk-blue-c {
  color: #3564b9 !important;
  border-color: #008fd5 !important;
}

.vlt-blue-c {
  color: #2bc2b5 !important;
  border-color: #008fd5 !important;
}

.pure-blue-c {
  color: #2f2470 !important;
  border-color: #008fd5 !important;
}

.black-blue-c {
  color: #7f2ca3 !important;
  border-color: #008fd5 !important;
}

.pure-g-c {
  color: #08f145 !important;
  border-color: #008fd5 !important;
}

.g-b-c {
  color: #009970 !important;
  border-color: #008fd5 !important;
}

.g-y-c {
  color: #3a5e00 !important;
  border-color: #008fd5 !important;
}

.y-b-c {
  color: #827500 !important;
  border-color: #008fd5 !important;
}

.y-b-c {
  color: #827500 !important;
  border-color: #008fd5 !important;
}

.b-b-c {
  color: #2b005c !important;
  border-color: #008fd5 !important;
}

.r-b-c {
  color: #c72828 !important;
  border-color: #008fd5 !important;
}

.h-r-c {
  color: #660000 !important;
  border-color: #008fd5 !important;
}

.r-r-c {
  color: red !important;
  border-color: #008fd5 !important;
}

.vlt-b-c {
  color: #8877a9 !important;
  border-color: #008fd5 !important;
}

.lt-g-b-c {
  color: #57c195 !important;
  border-color: #008fd5 !important;
}

.backdrop {
  position: fixed !important;
}

.merge-tag-input-border {
  box-sizing: border-box !important;
  border: 1px solid #c8e0e0 !important;
}

.margin-left-negative-fifteen-px {
  margin-left: -15px !important;
}

.fa-twenty-px {
  font-size: 20px !important;
}

.active-status {
  color: green !important;
}

.inactive-status {
  color: red !important;
}

.info-status {
  color: #007bb5 !important;
}

.inactive {
  cursor: not-allowed !important;
}

.pointer-events-none {
  pointer-events: none;
}

.float-none {
  float: none !important;
}

.custom-loader {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  background: rgba(0, 0, 0, 0.25) url(assets/images/loader.gif) no-repeat center
    center;
}

.add-design-upload {
  border-radius: 3px !important;
  float: right;
  margin-right: 10px;
}

.full-width-modal-popup {
  width: 100% !important;
}

.pre-wrap-next-line {
  white-space: pre-wrap;
}

.hash-table-color {
  background-color: #f1f1f1;
}

.table tr.row-selected td {
  background-color: #00a6e847 !important;
  color: white;
}

.beige {
  background-color: beige;
}

.filter-box-selected {
  background-color: #6dcff6 !important;
}

.overflow-x-auto {
  overflow-x: auto;
}

@media only screen and (max-width: 600px) {
  .mMobileDisable {
    pointer-events: none;
    cursor: not-allowed !important;
  }
}

.table tr.row-selected td {
  background-color: #00a6e847 !important;
  color: white;
}
.info-text-color {
  color: #38a8df !important;
}

.float-left {
  float: left !important;
}

.icon-fstpx {
  font-size: 20px !important;
}

.new-tab-button {
  color: white;
  background-color: #008fd5;
  float: right;
  height: 30px;
  padding-top: 4px;
  margin-right: 10px;
}

.float-right {
  float: right !important;
}

.mrfpx {
  margin-right: 5px !important;
}

.mtfpx {
  margin-top: 5px !important;
}
.xamplify-search {
  position: relative;
  right: -11px !important;
}

.mrfifpx {
  margin-right: 15px !important;
}

#left {
  float: left !important;
}

#search-text {
  height: 34px;
}

.mleft0px {
  margin-left: 0px !important;
}

.thumbnail-wrapper {
  float: left;
  width: 144px;
  height: 81px;
  background-color: #f1f1f1;
  text-align: center;
  position: relative;
}

.thumbnail-wrapper > img {
  max-width: 100%;
  max-height: 100%;
  height: 100%;
  width: auto;
  margin: 0 auto;
}

.xamplify-accordin-header {
  min-height: 0px !important;
  border-bottom: 0px solid #eee !important;
}

.all-contacts-count {
  color: #e87e04 !important;
}

.xamp-th-width {
  width: 120px !important;
}

.green-banner {
  background-color: green;
  color: white;
  padding: 4px;
  text-align: center;
  width: 158px;
  font-size: 11px;
  font-weight: 600;
  margin: 0 0;
}
.welcome-header {
  margin: 0.3em 0;
  color: #00a6e8;
  font-weight: 400;
}

.text-overflow{
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

